spotify/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-api
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: spotify-api
  template:
    metadata:
      labels:
        app: spotify-api
    spec:
      containers:
        - name: spotify-api
          image: ghcr.io/yooooomi/your_spotify_server:latest
          volumeMounts:
            - mountPath: /home/node
              name: spotify-pvc
      volumes:
        - name: spotify-pvc
          persistentVolumeClaim:
            claimName: spotify-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-web
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: spotify-web
  template:
    metadata:
      labels:
        app: spotify-web
    spec:
      containers:
        - name: spotify-api
          image: ghcr.io/pmh-only/playstats:latest
