spotify/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spotify-api-service
spec:
  selector:
    app: spotify-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-web-service
spec:
  selector:
    app: spotify-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
